--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ nav{
     display:flex;
     color: #202020;
     justify-content: flex-end;
-    flex-direction: row
+    flex-direction: row;
 }
 
 #resume_text{
