--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,31 @@
 *::after {
   box-sizing: border-box;
 }
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
 .hero{
-    /* display:flex;
+    display:flex;
     flex-direction: row;
-    justify-content: space-between; */
+    justify-content: space-around; 
+    padding-top: 3rem;
 }
 #hero_box{
-    width: 100%;
-    height: 25rem;
+    width: auto;
+    height: 35rem;
     background-color: royalblue;
     clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 83%);
 }
@@ -29,17 +46,17 @@ html {
     margin-right: 2rem;
 }
 #hero_img{
-    position: absolute;
+    /* position: absolute; */
     width: 24rem;
     height: 17rem;
-    left: 10rem;
-    top: 10rem;
+    /* left: 10rem;
+    top: 15rem; */
 }
 #hero_text{
     color: white;
     font-size: 4rem;
-    margin-left: 50%;
-    padding-top: 5rem;
+    /* margin-left: 50%;
+    padding-top: 5rem; */
 }
 .nav-link{
     font-size: 1.5rem;
