--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ dl,
 dd {
   margin: 0;
 }
+
+html{
+    font-size:62.5%;
+}
 .hero{
     display:flex;
     flex-direction: row;
@@ -70,8 +74,9 @@ html {
 }
 nav{
     display: flex;
-    margin: 2rem;
+    margin: 1rem;
     justify-content: space-between;
+    align-items:baseline;
 }
 ul{
     list-style-type: none;
@@ -101,4 +106,18 @@ nav a:hover:not(.active){
 }
 nav .active{
     background-color: brown;
+}
+
+@media only screen and (max-width: 1200px) {
+    * {
+        color: yellow;
+        font-size: 50%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        display:flex;
+        flex-direction: column;
+    }
 }
