--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ html {
 }
 html{
     font-size:62.5%;
+    text-decoration: none;
 }
 ul{
     list-style-type: none;
@@ -57,28 +58,33 @@ ul{
 .nav-name{
     color: royalblue;
     margin-left: 2rem;
+    text-decoration: none;
 }
 nav{
-    line-height: 4rem;
     font-size: 5rem;
     display: flex;
     margin: 1rem;
     justify-content: space-between;
-    /* align-items:baseline; */
+    align-items: baseline;
+    margin-bottom: 1.5rem;
 }
 #resume_text{
-    color: white;
-    font-style:normal;
-    border: 0rem;
-    padding: 0rem;
+    
+    font-style: normal;
+    height: auto;
+    line-height: 2rem;
+    padding: 0.7rem;
     background-color: rgb(86, 125, 243);
-
+}
+a:hover{
+    color: skyblue;
 }
 .hero{
     display:flex;
     flex-direction: row;
     justify-content: space-evenly; 
-    padding-top: 3rem;
+    align-items: center;
+    padding-bottom: 10rem;
 }
 #hero_box{
     width: auto;
@@ -88,15 +94,16 @@ nav{
 }
 #hero_img{
     /* position: absolute; */
-    width: 30rem;
-    height: 20rem;
+    width: 40rem;
+    height: 28rem;
     /* left: 10rem;
     top: 15rem; */
 }
 #hero_text{
+    width: 40%;
     color: white;
-    font-size: 5rem;
-    padding-top: 5rem; 
+    font-size: 4rem;
+    /* padding-top: 3rem;  */
 }
 .headers{
     margin-left: 15rem;
@@ -119,6 +126,10 @@ p{
     
     width: 50%;
 }
+#p1picture{
+    height:95%;
+    width:auto;
+}
 #projectLine{
     width:40%;
     text-align: left;
@@ -126,10 +137,42 @@ p{
     margin-left:24rem;
 }
 #p1link{
+    padding-top: 18rem;
     font-size: 3rem;
 }
-nav a:hover:not(.active){
-    color: skyblue;
+
+.experience_list{
+    display: flex;
+    flex-direction: row;
+}
+.exp1{
+    display: flex;
+    font-size: 1rem;
+    flex-direction: column;
+    width: 100%;
+}
+.exp2{
+    display: flex;
+    font-size: 1rem;
+    flex-direction: column;
+}
+.exp3{
+    display: flex;
+    font-size: 1rem;
+    flex-direction: column;
+}
+#exp1text{
+    font-size:2rem;
+}
+#exp2text{
+    font-size:2rem;
+}
+#exp3text{
+    font-size:2rem;
+}
+#exp1pic{
+    width:30rem;
+    height:auto;
 }
 
 @media only screen and (max-width: 1200px) {
