--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,14 @@ html{
 ul{
     list-style-type: none;
 }
-
+.hamburger {
+    display: none;
+    background-color: #555;
+    padding: 20px;
+}
 .link{
-    width: 40%;
+    /* width: 40%; */
+    width: 30%;
     display:flex;
     color: #202020;
     align-items: end;
@@ -127,11 +132,10 @@ p{
     margin-right: 24rem;
 }
 .project1left{
-    
     width: 50%;
 }
 #p1picture{
-    height:95%;
+    height:60rem;
     width:auto;
 }
 #p1paragraph{
@@ -152,9 +156,9 @@ p{
 }
 
 .experience_list{
+    padding-left: 10rem;
+    padding-right: 10rem;
     display: flex;
-    padding: 0;
-    flex-basis: 0;
     justify-content: space-around;
     flex-direction: row;
 }
@@ -192,28 +196,409 @@ p{
     width: 70%;
 }
 #exp1pic{
-    width:30rem;
-    height:30rem;
+    width:25rem;
+    height:25rem;
+    margin-top: 2rem;
 }
 #exp2pic{
-    width:30rem;
-    height:30rem;
+    width:25rem;
+    height:25rem;
+    margin-bottom: 2rem;
 }
 #exp3pic{
+    margin-top: 5rem;
+    margin-bottom: 2rem;
     width:30rem;
-    height:30rem;
+    height:20rem;
+}
+/* #contactinfo{
+    margin-left: 24rem;
+} */
+#contactinfo{
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+    display:flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: rgb(100, 100, 100);
+}
+@media only screen and (max-width: 1600px) {
+    .link{
+        width: 35%;
+        display:flex;
+        color: #202020;
+        align-items: end;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 2rem;
+        margin-right: 2rem;
+    }
+    #hero_box{
+        width: auto;
+        height: 47rem;
+        background-color: royalblue;
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 83%);
+    }
+    #hero_img{
+        /* position: absolute; */
+        width: 35rem;
+        height: 25rem;
+        /* left: 10rem;
+        top: 15rem; */
+    }
+    #hero_text{
+        width: 40%;
+        color: white;
+        font-size: 3rem;
+        /* padding-top: 3rem;  */
+    }
+    #p1picture{
+        height:53rem;
+        width:auto;
+    }
+    .headers{
+        margin-left: 10rem;
+        margin-right: 10rem;
+        font-size: 4rem;
+        color: rgb(50, 92, 218);
+    }
+    #aboutme_text{
+        margin-left: 19rem;
+        margin-right: 19rem;
+    }
+    #p1name{
+        margin-left: 19rem;
+        margin-right: 19rem;
+    }
+    #p1paragraph{
+        margin-left: 19rem;
+        margin-right: 19rem;
+    }
+    #projectLine{
+        width:40%;
+        text-align: left;
+        margin: 3rem;
+        margin-left: 19rem;
+    }
+    #p1link{
+        padding-top: 15rem;
+        font-size: 3rem;
+        margin-left: 19rem;
+        margin-right: 19rem;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    .link{
+        width: 40%;
+        display:flex;
+        color: #202020;
+        align-items: end;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 2rem;
+        margin-right: 2rem;
+    }
+    #hero_box{
+        width: auto;
+        height: 39rem;
+        background-color: royalblue;
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 83%);
+    }
+    #hero_img{
+        /* position: absolute; */
+        width: 30rem;
+        height: 22rem;
+        /* left: 10rem;
+        top: 15rem; */
+    }
+    #hero_text{
+        width: 40%;
+        color: white;
+        font-size: 2.5rem;
+        /* padding-top: 3rem;  */
+    }
+    #p1picture{
+        height:45rem;
+        width:auto;
+    }
+    .headers{
+        margin-left: 6rem;
+        margin-right: 6rem;
+        font-size: 4rem;
+        color: rgb(50, 92, 218);
+    }
+    #aboutme_text{
+        margin-left: 15rem;
+        margin-right: 15rem;
+    }
+    #p1name{
+        margin-left: 15rem;
+        margin-right: 15rem;
+    }
+    #p1paragraph{
+        margin-left: 15rem;
+        margin-right: 15rem;
+    }
+    #projectLine{
+        width:40%;
+        text-align: left;
+        margin: 3rem;
+        margin-left: 15rem;
+    }
+    #p1link{
+        padding-top: 13rem;
+        font-size: 3rem;
+        margin-left: 15rem;
+        margin-right: 15rem;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
-    * {
-        color: yellow;
-        font-size: 50%;
+    .link{
+        width: 48%;
+        display:flex;
+        color: #202020;
+        align-items: end;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 2rem;
+        margin-right: 2rem;
+    }
+    #p1picture{
+        height:45rem;
+        width:auto;
+    }
+    .headers{
+        margin-left: 3rem;
+        margin-right: 3rem;
+        font-size: 4rem;
+        color: rgb(50, 92, 218);
+    }
+    #aboutme_text{
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+    #p1name{
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+    #p1paragraph{
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+    #projectLine{
+        width:40%;
+        text-align: left;
+        margin: 3rem;
+        margin-left: 10rem;
+
+    }
+    #p1link{
+        padding-top: 11rem;
+        font-size: 3rem;
+        margin-left: 10rem;
+        margin-right: 10rem;
     }
 }
 
-@media only screen and (max-width: 600px) {
-    body {
+@media only screen and (max-width: 1000px) {
+    .link{
+        width: 51%;
+        display:flex;
+        color: #202020;
+        align-items: end;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 2rem;
+        margin-right: 2rem;
+    }
+    #p1picture{
+        height:40rem;
+        width:auto;
+    }
+    .headers{
+        margin-left: 3rem;
+        margin-right: 3rem;
+        font-size: 4rem;
+        color: rgb(50, 92, 218);
+    }
+    #aboutme_text{
+        margin-left: 10rem;
+        margin-right: 7rem;
+    }
+    #p1name{
+        margin-left: 10rem;
+        margin-right: 7rem;
+    }
+    #p1paragraph{
+        margin-left: 10rem;
+        margin-right: 7rem;
+    }
+    #projectLine{
+        width:40%;
+        text-align: left;
+        margin: 3rem;
+        margin-left: 10rem;
+
+    }
+    #p1link{
+        padding-top: 9rem;
+        font-size: 3rem;
+        margin-left: 10rem;
+        margin-right: 7rem;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .hamburger{
+        display: block;
+    }
+    .navbar {
+        height: 60px;
+    }
+    .navbar ul {
+        position: absolute;
+        width: 100%;
+        height: 200px; 
+        left: 0;
+        top: 60px;
+        flex-direction: column;
+        align-items: center;
+        border-top: 1px solid #444;
+        max-height: 0;
+        overflow: hidden;
+        transition: .3s;
+    }
+    .navbar ul li {
+        width: 100%;
+        text-align: center;
+    }
+    .navbar ul li a {
+        padding: 25px;
+    }
+    .navbar ul.open {
+        max-height: 100vh;
+        overflow: visible;
+    }
+    .hero{
+        display:flex;
+        display:none;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 10rem;
+    }
+    #hero_box{
+        width: auto;
+        height: 100rem;
+        background-color: royalblue;
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 90%);
+    }
+    #hero_img{
+        /* position: absolute; */
+        width: 50rem;
+        height: 39rem;
+        /* left: 10rem;
+        top: 15rem; */
+    }
+    #hero_text{
+        width: 80%;
+        color: white;
+        font-size: 3.5rem;
+        /* padding-top: 3rem;  */
+    }
+    .project1{
         display:flex;
         flex-direction: column;
+        align-items: center;
     }
+    #p1name{
+        margin-left: 10rem;
+        margin-right: 7rem;
+    }
+    .project1left{
+        width: 100%;
+    }
+    #p1picture{
+        height:50rem;
+        width:auto;
+        margin-bottom: 3rem;
+    }
+    #p1paragraph{
+        margin-left: 10rem;
+        margin-right: 7rem;
+    }
+    #projectLine{
+        width:40%;
+        text-align: left;
+        margin: 3rem;
+        margin-left: 10rem;
+    }
+    #p1link{
+        padding-top: 3rem;
+        font-size: 3rem;
+        margin-left: 10rem;
+        margin-right: 7rem;
+        margin-bottom: 3rem;
+    }
+
+    .experience_list{
+        padding-left: 10rem;
+        padding-right: 10rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .exp1{
+        display: flex;
+        font-size: 1rem;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        margin-bottom: 4rem;
+    }
+    .exp2{
+        display: flex;
+        font-size: 1rem;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        margin-bottom: 4rem;
+    }
+    .exp3{
+        display: flex;
+        font-size: 1rem;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        margin-bottom: 4rem;
+    }
+    #exp1text{
+        font-size:2rem;
+        width: 70%;
+    }
+    #exp2text{
+        font-size:2rem;
+        width: 70%;
+    }
+    #exp3text{
+        font-size:2rem;
+        width: 70%;
+    }
+    #exp1pic{
+        width:25rem;
+        height:25rem;
+        margin-top: 2rem;
+    }
+    #exp2pic{
+        width:25rem;
+        height:25rem;
+        margin-bottom: 2rem;
+    }
+    #exp3pic{
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+        width:30rem;
+        height:20rem;
+    } 
 }
