--- a/styles.css
+++ b/styles.css
@@ -451,35 +451,52 @@ p{
 }
 
 @media only screen and (max-width: 900px) {
+    .nav-link{display:none}
+    nav{}
+    .link{display:none}
     .hamburger{
+        display:block;
+    }
+    /* Style the navigation menu */
+    .topnav {
+        overflow: hidden;
+        background-color: #333;
+        position: relative;
+    }
+    
+    /* Hide the links inside the navigation menu (except for logo/home) */
+    .topnav .link {
+        display: none;
+    }
+    
+    /* Style navigation menu links */
+    .topnav a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
         display: block;
     }
-    .navbar {
-        height: 60px;
-    }
-    .navbar ul {
+    
+    /* Style the hamburger menu */
+    .topnav a.icon {
+        background: black;
+        display: block;
         position: absolute;
-        width: 100%;
-        height: 200px; 
-        left: 0;
-        top: 60px;
-        flex-direction: column;
-        align-items: center;
-        border-top: 1px solid #444;
-        max-height: 0;
-        overflow: hidden;
-        transition: .3s;
+        right: 0;
+        top: 0;
     }
-    .navbar ul li {
-        width: 100%;
-        text-align: center;
+    
+    /* Add a grey background color on mouse-over */
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
     }
-    .navbar ul li a {
-        padding: 25px;
-    }
-    .navbar ul.open {
-        max-height: 100vh;
-        overflow: visible;
+    
+    /* Style the active link (or home/logo) */
+    .active {
+        background-color: #4CAF50;
+        color: white;
     }
     .hero{
         display:flex;
