--- a/styles.css
+++ b/styles.css
@@ -110,9 +110,10 @@ a:hover{
 }
 #hero_img{
     /* position: absolute; */
+    margin-top: 5rem;
     margin-left: 10rem;
     width: 35rem;
-    clip-path: ellipse(38% 47% at 50% 50%);
+    clip-path: ellipse(45% 46% at 50% 47%);
     /* left: 10rem;
     top: 15rem; */
 }
@@ -194,21 +195,25 @@ p{
     width: 50%;
 }
 #exp1text{
+    text-align:center;
     font-size:2rem;
     width: 70%;
 }
 #exp2text{
+    text-align:center;
     font-size:2rem;
     width: 70%;
 }
 #exp3text{
+    text-align:center;
     font-size:2rem;
     width: 70%;
 }
 #exp1pic{
-    width:25rem;
-    height:25rem;
-    margin-top: 2rem;
+    margin-top: 3.5rem;
+    margin-bottom: 2rem;
+    width:26rem;
+    height:21rem;
 }
 #exp2pic{
     width:25rem;
@@ -216,10 +221,9 @@ p{
     margin-bottom: 2rem;
 }
 #exp3pic{
-    margin-top: 5rem;
-    margin-bottom: 2rem;
-    width:30rem;
-    height:20rem;
+    width:25rem;
+    height:25rem;
+    margin-top: 2rem;
 }
 #contactinfo{
     margin-top: 6rem;
